// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/post_view/post_list_row should have class hideAnimation for NEWER_MESSAGES_LOADER if loadingNewerPosts is false 1`] = `
<div>
  <div
    class="loading-screen"
  >
    <div
      class="loading__content hideAnimation"
    >
      <div
        class="round round-1"
      />
      <div
        class="round round-2"
      />
      <div
        class="round round-3"
      />
    </div>
  </div>
</div>
`;

exports[`components/post_view/post_list_row should have class hideAnimation for OLDER_MESSAGES_LOADER if loadingOlderPosts is false 1`] = `
<div>
  <div
    class="loading-screen"
  >
    <div
      class="loading__content hideAnimation"
    >
      <div
        class="round round-1"
      />
      <div
        class="round round-2"
      />
      <div
        class="round round-3"
      />
    </div>
  </div>
</div>
`;

exports[`components/post_view/post_list_row should render channel intro message 1`] = `
<div>
  <div
    data-testid="channel-intro-message"
  >
    ChannelIntroMessage
  </div>
</div>
`;

exports[`components/post_view/post_list_row should render combined post 1`] = `
<div>
  <div
    data-testid="combined-user-activity"
  >
    CombinedUserActivityPost: user-activity-1234-5678
  </div>
</div>
`;

exports[`components/post_view/post_list_row should render date line 1`] = `
<div>
  <div
    data-testid="date-separator"
  >
    DateSeparator: 1553106600000
  </div>
</div>
`;

exports[`components/post_view/post_list_row should render manual load messages trigger 1`] = `
<div>
  <button
    class="more-messages-text theme style--none color--link"
  >
    Load more messages
  </button>
</div>
`;

exports[`components/post_view/post_list_row should render more messages loading indicator 1`] = `
<div>
  <div
    class="loading-screen"
  >
    <div
      class="loading__content"
    >
      <div
        class="round round-1"
      />
      <div
        class="round round-2"
      />
      <div
        class="round round-3"
      />
    </div>
  </div>
</div>
`;

exports[`components/post_view/post_list_row should render new messages line 1`] = `
<div>
  <div
    data-testid="new-message-separator"
  >
    NewMessageSeparator: start-of-new-messages-1553106600000
  </div>
</div>
`;

exports[`components/post_view/post_list_row should render post 1`] = `
<div>
  <div
    data-testid="post"
  >
    Post: post_id_1
  </div>
</div>
`;
